fixing filter spacing

--- a/src/styles/scss/components/_filters.scss
+++ b/src/styles/scss/components/_filters.scss
@@ -1,4 +1,6 @@
 .filters {
+  margin: $spacer auto;
+
   a {
     padding: 1rem;
   }
@@ -8,7 +10,8 @@
   }
 
   .active {
-    color: $accent-color;
+    color: $light-color;
+    @include thick-underline(0.2rem);
   }
 }
 
